resources/assets/sass/base/_typography.scss
body {
	font-family: $body-font;
	font-size: 1em;
	line-height: 1.2em;
}
p {
	font-size: 1em;
	line-height: 1.2em;
}
p ~ p {
	padding-top: 20px;
}
h1 {
	font-family: $alt-header-font;
	font-size: 2em;
	line-height: 1.2em;
}
em {
	font-style: italic !important;
}
strong {
	font-weight: 700 !important;
}
.site-main {
	h1, h2, h3, h4, h5, h6 {
		line-height: 1.3;
	}
	ul {
		list-style-type: inherit;
		padding-left: 40px;
		max-width: 800px;
		margin: 20px auto;
		color: $dark-gray;
	}
	ol {
		list-style-type: inhreit;
		max-width: 800px;
		margin: 20px auto;
		color: $dark-gray;
		padding-left: 40px;
	}
	blockquote {
		font-family: $alt-header-font;
		font-style: italic;
		border-bottom: 1px solid $light-grey;
		border-top: 1px solid $light-grey;
		max-width: 600px;
		margin: 50px auto;
		color: $dark-gray;
		font-size: 1.5em;
		padding: 30px;
	}
	li {
		margin-bottom: 5px;
	}
	h1 {
		text-align: center;
		color: $teal;
		font-weight: 700;
		max-width: 800px;
		margin: 0px auto 40px;
		display: block;
		font-size: 3em;
	}
	h5 {
		font-size: 1.6em;
		font-family: $alt-header-font;
		color: $teal;
		padding-top: 10px;
		font-weight: 800;
	}
	.contributors{
		margin:0 auto;
		text-align:center;
		font-family:$header-font;
		font-weight:600;
		margin-top:-10px;
		margin-bottom: 25px;
		font-size:1.2em;
		color:$dark-purple;
	}
}

